--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: home
 ---
 Willkommen zur Gilden Seite der Schweizer Allianz zum Spiel Zero City.
 
-Wir sind eine gesellige, aktive, tolerante und offene <a href="https://ht201.github.io/swiss-knights-z/about/">Allianz</a> denen das Spiel Zero City einfach Spass macht.
+Wir sind eine gesellige, aktive, tolerante und offene <a href="https://el-negroooar.github.io/swiss-knights-z/about/">Allianz</a> denen das Spiel Zero City einfach Spass macht.
 
 <br><br>
 
-Unter <a href="https://ht201.github.io/swiss-knights-z/guide/">Guide</a> findest du unsere Empfehlung wie ihr euch optimal entwickelt und uns aktiv im <a href="https://ht201.github.io/swiss-knights-z/pvp/allywar/">Allianz-Krieg</a> unterstützen könntet.
+Unter <a href="https://el-negroooar.github.io/swiss-knights-z/guide/">Guide</a> findest du unsere Empfehlung wie ihr euch optimal entwickelt und uns aktiv im <a href="https://el-negroooar.github.io/swiss-knights-z/pvp/allywar/">Allianz-Krieg</a> unterstützen könntet.
 
 <br><br>
 
