--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 ---
 Willkommen zur Gilden Seite der Schweizer Allianz zum Spiel Zero City.
 
-Wir sind eine gesellige, aktive, tolerante und offene <a href="https://el-negroooar.github.io/swiss-knights-z/about/">Allianz</a> denen das Spiel Zero City einfach Spass macht.
+Wir sind eine gesellige, aktive, tolerante und offene <a href="https://el-negroooar.github.io/swiss-knights-z/about/">Allianz</a> denen das Spiel Zero City einfach Spass macht!
 
 <br><br>
 
