--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Wir sind eine gesellige, aktive, tolerante und offene <a href="https://el-negroo
 Unter <a href="https://el-negroooar.github.io/swiss-knights-z/guide/">Guide</a> findest du unsere Empfehlung wie ihr euch optimal entwickelt und uns aktiv im <a href="https://el-negroooar.github.io/swiss-knights-z/pvp/allywar/">Allianz-Krieg</a> unterstützen könntet.
 
 <br><br>
-
+{% last_modified_at %Y:%B:%A:%d:%S:%R %}
 <h2>Über diese Seite</h2>
 
 Inhalte auf dieser Homepage sind ein Gemeinschaftswerk der Allianz und dienen als Informationsquelle für unsere Mitglieder. Informationen haben keinen Anspruch auf Vollständigkeit. Wir verwenden keine Cookies.
