--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Wir sind eine gesellige, aktive, tolerante und offene <a href="https://el-negroo
 <br><br>
 
 Unter <a href="https://el-negroooar.github.io/swiss-knights-z/guide/">Guide</a> findest du unsere Empfehlung wie ihr euch optimal entwickelt und uns aktiv im <a href="https://el-negroooar.github.io/swiss-knights-z/pvp/allywar/">Allianz-Krieg</a> unterstützen könntet.
-{{ page.date | date: "%b %d, %Y" }}
+Test {{ page.date | date: "%b %d, %Y" }} here.
 <br><br>
 
 <h2>Über diese Seite</h2>
